the waitImage feature/option is now implemented for ajax-loaded clueTips the drop-shadow effect is now created with dynamically generated div elements with decreasing level of opacity. This allows for cross-browser compatibility without having to deal with png hacks. added a dropShadow option that adds a drop shadow to the clueTip. Default is true the clueTip heading (<h3>) now comes before <div id="cluetip-inner">, not inside it. This should make it much easier to apply sane CSS. added alternate theme based on Cody Lindley’s jTip, and created demo files to show it (alt-demo.html, et. al.) added an arrows option that sets the vertical background position to line up an image with the hovered element. Default is false. This option should be set to true for the alternate jTip theme. <div id="cluetip"> now gets class="clue-left" if positioned to the left of the hovered element and class="clue-right" if positioned to the right. Useful for styling the clueTip differently based on where it displays, as is done in the jTip theme. changed $(document).width() to the more appropriate $(window).width() for positioning the clueTip’s x coordinate. changed the clueTip’s height calculation to occur after truncate and tipTitle options are considered so that positioning will be more accurate and drop shadows will be applied correctly.
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@2414 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/cluetip/demo/main.css
+++ b/plugins/cluetip/demo/main.css
@@ -1,13 +1,20 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Verdana, sans-serif;
+  font-size: 95%;
   margin: 0;
   padding: 20px;
 }
-
+li {
+  margin-top: .5em;
+  margin-bottom: .5em;
+}
 pre, code {
   font-size: 1em;
 }
-
+pre {
+  padding: .5em;
+  background-color: #eef;
+}
 #navigation {
   list-style-type: none;
   margin-left: 0;
@@ -50,11 +57,13 @@ pre, code {
   float: left;
   margin-right: .5em;
   display: inline;
+  position: relative;
 }
 .float-right {
   float: right;
   margin-left: .5em;
   display: inline;
+  position: relative;
 }
 h2 {
   font-size: 1.1em;
